--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li><span>Freelancer</span></li>
         </ul>
     </div>
-    <audio autoplay loop>
+    <audio autoplay>
         <source src="./audio/keyorigin.mp3">
     </audio>
 </body>
